2014-05-09  Peter Stephenson  <p.stephenson@samsung.com>

	* Eric Cook: 32602: Doc/Zsh/grammar.yo: status of try + always
	block is from the former, not the latter.

2014-05-08  Peter Stephenson  <p.stephenson@samsung.com>

	* m0viefreak: 32600: Src/Zle/computil.c: fix problem with
	_arguments thinking -- is a single letter option called '-',
	which it isn't.

2014-05-06  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 32597: Functions/VCS_Info/Backends/VCS_INFO_get_data_git:
	vcs_info git: Describe detached heads symbolically.

2014-04-29  Peter Stephenson  <p.stephenson@samsung.com>

	* Tomoki Sekiyama: 32592: add CORRECT_IGNORE_FILE variable.

2014-04-23  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Sebastien Alaiwan: 32562: Completion/Unix/Command/_bzr:
	updates for bzr completion.

	* Jasper Lievisse Adriaanse: 32558: configure.ac:
	_XOPEN_SOURCE_EXTENDED now works OK on OpenBSD.

2014-04-25  Barton E. Schaefer  <schaefer@zsh.org>

	* 32580: Src/hist.c: avoid indefinite wait in lockhistfile() by
	checking for lock file time stamp far in the future relative to
	the local clock.  Change behavior of HIST_FCNTL_LOCK to use only
	fcntl() locking, rather than applying both kinds of lock.

2014-04-20  Barton E. Schaefer  <schaefer@zsh.org>

	* 32569: Src/loop.c: lastval ($?) should not be reset between
	word list substitution and loop body execution in for/select.

	* 32568: Src/exec.c, Src/loop.c: consistency in handling of errflag
	condition during substitutions in for/select word lists, function
	definition name position, and anonymous function argument lists.

2014-04-17  Barton E. Schaefer  <schaefer@zsh.org>

	* Andrew Waldron: 32552 (updated by 32560): Src/exec.c,
	Src/parse.c, Src/subst.c, Test/C04funcdef.ztst:  fix segfault
	when using process substitution in anonymous function argument
	list; disallow process substitution in function name position.

2014-04-15  Barton E. Schaefer  <schaefer@zsh.org>
